--- a/package.json
+++ b/package.json
@@ -9,17 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^13.2.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.3",
+    "@types/react": "18.2.6",
+    "next": "^13.4.12",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "20.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.1",
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^13.4.12",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-config-standard-with-typescript": "^37.0.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.1",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "prettier": "3.0.1",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^5.1.6"
   },
   "export": "next export"
 }
