--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.4.19",
+    "@types/next": "^9.0.0",
     "@types/node": "20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "autoprefixer": "^10.4.14",
@@ -35,5 +37,11 @@
     "tailwindcss": "^3.2.7",
     "typescript": "^5.1.6"
   },
-  "export": "next export"
+  "export": "next export",
+  "nextBundleAnalysis": {
+    "budget": null,
+    "budgetPercentIncreaseRed": 20,
+    "minimumChangeThreshold": 0,
+    "showDetails": true
+  }
 }
