Change bundle analysis to only run on pr or push towards dev and master

--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -5,6 +5,9 @@ name: 'Next.js Bundle Analysis'
 
 on:
   pull_request:
+    branches:
+      - master
+      - dev
   push:
     branches:
       - master # change this if your default branch is named differently
