--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^13.4.12",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.4.19",
