Add place holder content, placed social media links and add responsive elements

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,5 +17,5 @@
     "project": true
   },
   "plugins": ["react"],
-  "rules": {}
+  "rules": { "@typescript-eslint/restrict-template-expressions": "error" }
 }
