--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react": "18.2.6",
+    "gsap": "^3.12.2",
     "next": "^13.4.12",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
