--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "@types/react": "18.2.6",
     "@vercel/analytics": "^1.0.2",
     "@vercel/speed-insights": "^1.0.2",
+    "framer-motion": "^11.0.3",
     "gsap": "^3.12.2",
     "next": "^13.4.12",
     "next-themes": "^0.2.1",
