--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,12 +10,23 @@
     "prettier",
     "plugin:@next/next/recommended"
   ],
-  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module",
-    "project": true
+    "sourceType": "module"
   },
   "plugins": ["react"],
-  "rules": { "@typescript-eslint/restrict-template-expressions": "error" }
+  "rules": { "@typescript-eslint/restrict-template-expressions": "error" },
+  "overrides": [
+    {
+      "files": ["**/*.ts", "**/*.tsx"],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "project": "./portfolio/tsconfig.json"
+      },
+      "plugins": ["@typescript-eslint"],
+      "rules": {
+        "@typescript-eslint/explicit-function-return-type": "error"
+      }
+    }
+  ]
 }
