--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
       "files": ["**/*.ts", "**/*.tsx"],
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
-        "project": "./portfolio/tsconfig.json"
+        "project": "./tsconfig.json"
       },
       "plugins": ["@typescript-eslint"],
       "rules": {
