--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,30 +3,16 @@
     "browser": true,
     "es2021": true
   },
-  "root": true,
   "extends": [
     "standard-with-typescript",
     "plugin:react/recommended",
-    "prettier",
-    "plugin:@next/next/recommended"
+    "next/core-web-vitals",
+    "prettier"
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "plugins": ["react"],
-  "rules": { "@typescript-eslint/restrict-template-expressions": "error" },
-  "overrides": [
-    {
-      "files": ["**/*.ts", "**/*.tsx"],
-      "parser": "@typescript-eslint/parser",
-      "parserOptions": {
-        "project": "./tsconfig.json"
-      },
-      "plugins": ["@typescript-eslint"],
-      "rules": {
-        "@typescript-eslint/explicit-function-return-type": "error"
-      }
-    }
-  ]
+  "rules": {}
 }
