--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@types/react": "18.2.6",
     "@vercel/analytics": "^1.0.2",
     "@vercel/speed-insights": "^1.0.2",
+    "dotenv": "^16.4.5",
     "eslint-config-next": "^14.1.0",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.0.5",
     "gsap": "^3.12.2",
-    "next": "^13.4.12",
+    "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
