--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "paths": {
       "@/*": ["./*"],
       "@/utils/*": ["./utils/*"],
+      "@/components/*": ["./components/*"],
       "contentlayer/generated": ["./.contentlayer/generated"]
     }
   },
