--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "gsap": "^3.12.2",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.4.19",
     "@types/next": "^9.0.0",
     "@types/node": "20.2.5",
+    "@types/qrcode": "^1.5.5",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.56.0",
