--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "swr": "^2.2.5",
     "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
