--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-window": "^1.8.10",
+    "react-window-infinite-loader": "^1.0.9",
     "swr": "^2.2.5",
     "typewriter-effect": "^2.20.1"
   },
