--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/next": "^9.0.0",
     "@types/node": "20.2.5",
     "@types/qrcode": "^1.5.5",
+    "@types/react-window-infinite-loader": "^1.0.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.56.0",
