--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -6,10 +6,11 @@ name: 'Next.js Bundle Analysis'
 on:
   pull_request:
     branches:
+      - master
       - dev
   push:
     branches:
-      - master # change this if your default branch is named differently
+      - master
   workflow_dispatch:
 
 defaults:
