--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@spotify/web-api-ts-sdk": "^1.2.0",
     "@types/react": "18.2.6",
     "@vercel/analytics": "^1.0.2",
     "@vercel/speed-insights": "^1.0.2",
@@ -20,6 +21,7 @@
     "eslint-config-next": "^14.1.0",
     "gsap": "^3.12.2",
     "next": "^14.1.3",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
