--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hot-toast": "^2.4.1",
     "react-window": "^1.8.10",
     "react-window-infinite-loader": "^1.0.9",
+    "sharp": "^0.33.4",
     "swr": "^2.2.5",
     "typewriter-effect": "^2.20.1"
   },
