--- a/package.json
+++ b/package.json
@@ -11,22 +11,35 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@spotify/web-api-ts-sdk": "^1.2.0",
     "@types/react": "18.2.6",
     "@vercel/analytics": "^1.0.2",
     "@vercel/speed-insights": "^1.0.2",
+    "dotenv": "^16.4.5",
     "eslint-config-next": "^14.1.0",
     "gsap": "^3.12.2",
-    "next": "^13.4.12",
+    "next": "^14.1.3",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-virtualized-auto-sizer": "^1.0.24",
+    "react-window": "^1.8.10",
+    "react-window-infinite-loader": "^1.0.9",
+    "sharp": "^0.33.4",
+    "swr": "^2.2.5",
     "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.4.19",
     "@types/next": "^9.0.0",
     "@types/node": "20.2.5",
+    "@types/qrcode": "^1.5.5",
+    "@types/react-window-infinite-loader": "^1.0.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.56.0",
