Add access to github access token

--- a/.github/workflows/nextjs_build_deploy.yml
+++ b/.github/workflows/nextjs_build_deploy.yml
@@ -1,10 +1,7 @@
 name: Personal page
 
 env:
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-  NEXT_PUBLIC_SPOTIFY_CLIENT_ID: ${{ vars.NEXT_PUBLIC_SPOTIFY_CLIENT_ID }}
-  SPOTIFY_CLIENT_SECRET: ${{ secrets.SPOTIFY_CLIENT_SECRET }}
+  ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
 on:
   # Runs on pushes targeting the default branch
