93 js r1004 useless template literal found (#97)
* finish remote template string

* Add deep source

* Fix any type

* Avoid .bind() or local functions in JSX properties

* Reduce complexity of project page

* Reduce one more level

* change != to !==

* Fix some performance issues

* Add access token catch error

* Add access to github access token

--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -11,11 +11,9 @@ on:
   push:
     branches:
       - master
-  workflow_dispatch:
 
 env:
-  NEXT_PUBLIC_SPOTIFY_CLIENT_ID: ${{ vars.NEXT_PUBLIC_SPOTIFY_CLIENT_ID }}
-  SPOTIFY_CLIENT_SECRET: ${{ secrets.SPOTIFY_CLIENT_SECRET }}
+  ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
 defaults:
   run:
@@ -30,6 +28,7 @@ permissions:
 jobs:
   analyze:
     runs-on: ubuntu-latest
+    environment: development
     steps:
       - uses: actions/checkout@v3
 
