--- a/.github/workflows/nextjs_build_deploy.yml
+++ b/.github/workflows/nextjs_build_deploy.yml
@@ -1,8 +1,5 @@
 name: Personal page
 
-env:
-  ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
 on:
   # Runs on pushes targeting the default branch
   push:
@@ -10,6 +7,9 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
+env:
+  ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -26,6 +26,7 @@ jobs:
   # Deployment job
   Deploy-Production:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
